--- a/js-mtt-websockets-demo/index.html
+++ b/js-mtt-websockets-demo/index.html
@@ -11,10 +11,10 @@
       <div class="wrapper">
          <h1>mqtt-demo</h1>
          <form id="connection-information-form">
-            <b>Hostname or IP Address:</b> 
-            <input id="host" type="text" name="host" value="test.mosquitto.org"><br>
+            <b>Hostname or IP Address:</b>
+            <input id="host" type="text" name="host" value="10.10.1.215"><br>
             <b>Port:</b>
-            <input id="port" type="text" name="port" value="8080"><br>
+            <input id="port" type="text" name="port" value="3883"><br>
             <b>Topic:</b>
             <input id="topic" type="text" name="topic" value="#"><br><br>
             <input type="button" onclick="startConnect()" value="Connect">
